--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>To-Do List</title>
+  <title>My routineTo-Do List</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="todo-container">
-    <h1>My To-Do List</h1>
+    <h1>MY Routine</h1>
     <div class="input-section">
       <input type="text" id="task-input" placeholder="Add a new task..." />
       <button onclick="addTask()">Add</button>
